Revert changes that broke stop name lookup + get popups working